--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   firebase_auth: ^5.5.0
   collection: ^1.18.0
-
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +71,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/animation/sneaker.json
+    - assets/image/img.png
+    - assets/image/admin-panel.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
